--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,3 +102,11 @@ html {
       transform: translateY(0);
     }
   }
+
+  .clip-polygon-right {
+  clip-path: polygon(0 0, 93% 0, 100% 50%, 93% 100%, 0 100%);
+}
+
+.clip-polygon-left {
+  clip-path: polygon(7% 0, 100% 0, 100% 100%, 7% 100%, 0 50%);
+}
