--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,9 +9,14 @@ body {
   font-family: 'Space Grotesk', sans-serif;
 } */
 
-
+/* Apply Rajdhani to all elements by default */
 body {
   font-family: 'Rajdhani', sans-serif;
+}
+
+/* Apply Poppins only to <p> elements */
+p {
+  font-family: 'Poppins', sans-serif;
 }
 
 
