--- a/static/css/style.css
+++ b/static/css/style.css
@@ -121,3 +121,16 @@ p {
 .clip-polygon-left {
   clip-path: polygon(7% 0, 100% 0, 100% 100%, 7% 100%, 0 50%);
 }
+.slide {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.8s ease-in-out, visibility 0.8s ease-in-out;
+    position: absolute;
+    inset: 0;
+  }
+
+  .slide.active {
+    opacity: 1;
+    visibility: visible;
+    z-index: 10;
+  }
